🐛 fix: prevent wrap o nickname in match turns list

--- a/src/scss/utility/_typography.scss
+++ b/src/scss/utility/_typography.scss
@@ -48,6 +48,10 @@
 		font-family: 'Fira Code', monospace;
 	}
 
+	.nowrap {
+		text-wrap: nowrap;
+	}
+
 	@font-face {
 		font-family: Recursive;
 		font-style: normal;
